# WaveApp

./: CMakeLists.txt
resources/: resources.qrc
resources/styles/: main.qss
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/charts/: RealtimeChartPlotter.cpp  RealtimeChartPlotter.h
src/pages/: BasePage.h  ConfigPage.cpp  ConfigPage.h  DataPage.cpp  DataPage.h  DevicePage.cpp  DevicePage.h
